// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions-panel Renders \`actions-panel\` with actions correctly on the extra large size 1`] = `
<div
  class="actions-panel"
>
  <div
    class="layout align-center"
  >
    <c-action-btn-stub
      color="primary"
      icon="edit"
      tooltip="Edit title"
    />
    <c-action-btn-stub
      color="secondary"
      icon="delete"
      tooltip="Delete title"
    />
    <!---->
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with actions correctly on the extra large size 2`] = `undefined`;

exports[`actions-panel Renders \`actions-panel\` with actions correctly on the large size 1`] = `
<div
  class="actions-panel"
>
  <div
    class="layout align-center"
  >
    <span>
      <button
        class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light"
          >
            more_vert
          </i>
        </span>
      </button>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </span>
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with actions correctly on the large size 2`] = `undefined`;

exports[`actions-panel Renders \`actions-panel\` with default props correctly on the extra large size 1`] = `
<div
  class="actions-panel"
>
  <div
    class="layout align-center"
  >
    <!---->
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with default props correctly on the extra large size 2`] = `undefined`;

exports[`actions-panel Renders \`actions-panel\` with default props correctly on the large size 1`] = `
<div
  class="actions-panel"
>
  <div
    class="layout align-center"
  >
    <!---->
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with default props correctly on the large size 2`] = `undefined`;

exports[`actions-panel Renders \`actions-panel\` with dropdown actions correctly on the large size 1`] = `
<div
  class="actions-panel"
>
  <div
    class="layout align-center"
  >
    <span>
      <button
        class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light"
          >
            more_vert
          </i>
        </span>
      </button>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </span>
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with dropdown actions correctly on the large size 2`] = `undefined`;

exports[`actions-panel Renders \`actions-panel\` with dropdown actions correctly on the mobile size 1`] = `
<div
  class="actions-panel"
>
  <div
    class="layout align-center"
  >
    <span>
      <button
        class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light"
          >
            more_vert
          </i>
        </span>
      </button>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </span>
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with dropdown actions correctly on the mobile size 2`] = `undefined`;

exports[`actions-panel Renders \`actions-panel\` with dropdown actions correctly on the tablet size 1`] = `
<div
  class="actions-panel"
>
  <div
    class="layout align-center"
  >
    <span>
      <button
        class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
        type="button"
      >
        <span
          class="v-btn__content"
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate material-icons theme--light"
          >
            more_vert
          </i>
        </span>
      </button>
      <div
        class="v-menu"
      >
        <!---->
      </div>
    </span>
  </div>
</div>
`;

exports[`actions-panel Renders \`actions-panel\` with dropdown actions correctly on the tablet size 2`] = `undefined`;
